Fix readability of texts in banner

--- a/apps/blog/src/components/Banner/index.module.scss
+++ b/apps/blog/src/components/Banner/index.module.scss
@@ -16,7 +16,6 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        background-color: #000;
         z-index: -1;
 
         > img {
@@ -31,7 +30,6 @@
         width: clamp(0px, map-get($container-width, small), 100%);
         margin: 250px 0 0;
         padding: 36px $container-padding;
-        background-color: color(background);
         border-radius: 12px 12px 0 0;
     }
 }
