--- a/apps/blog/src/components/GlobalNavigationBackground/index.module.scss
+++ b/apps/blog/src/components/GlobalNavigationBackground/index.module.scss
@@ -11,4 +11,8 @@
     opacity: 0;
     transition: opacity 0.25s $ease-in-out-cubic;
     z-index: -1;
+
+    &--scrolled {
+        opacity: 1;
+    }
 }
